--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     href="https://www.google.com/search?q=ho+chi+minh+city&oq=Ho+c&gs_lcrp=EgZjaHJvbWUqDggAEEUYJxg7GIAEGIoFMg4IABBFGCcYOxiABBiKBTIGCAEQLhgDMgYIAhBFGDkyBwgDEC4YgAQyBggEEAAYAzIGCAUQRRg8MgYIBhBFGDwyBggHEEUYPNIBCDEyNzJqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8"
                     target="_blank"
                 >
-                    <p class="absolute text-white m-5 libre-baskerville-regular">Ho Chi Minh city</p>
+                    <p class="absolute text-white m-10 libre-baskerville-regular text-5xl font-extrabold">Ho Chi Minh city</p>
                     <img src="https://www.new7wonders.com/app/uploads/sites/5/2016/10/ho-chi-minh-city-1348092-2470x1647.jpg" alt="" />
                 </a>
                 <a
@@ -74,7 +74,7 @@
                     href="https://www.google.com/search?q=ha+noi&oq=Ha+noi++&gs_lcrp=EgZjaHJvbWUqBggAEEUYOzIGCAAQRRg7MgYIARBFGDsyBggCEC4YAzIGCAMQABgDMgYIBBAAGAMyBwgFEAAYgAQyCQgGEC4YChiABDIHCAcQLhiABDIHCAgQABiABDIHCAkQABiPAtIBCDI1ODJqMGo5qAIAsAIA&sourceid=chrome&ie=UTF-8"
                     target="_blank"
                 >
-                    <p class="absolute text-white m-5 libre-baskerville-regular">Ha Noi</p>
+                    <p class="absolute text-white m-10 libre-baskerville-regular text-5xl font-extrabold">Ha Noi</p>
                     <img src="https://datviettour.com.vn/uploads/images/tin-tuc-SEO/mien-bac/Ha-noi/danh-thang/pho-duong-tau-ha-noi-5.jpg" alt="" />
                 </a>
             </div>
