--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <header class="bg-rose-900 overflow-hidden flex flex-col mb-20">
             <div class="flex flex-col mx-50">
                 <div class="flex text-white p-5 justify-between mb-20">
+                    <img src="img/texture.png" alt="" class="absolute opacity-25 ml-200" />
                     <h1 class="lobster-two-regular text-xl">MiaHotel</h1>
                     <div class="flex gap-6">
                         <select name="currency" id="" class="font-bold bg-rose-900">
