--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     </head>
     <body>
         <header class="bg-rose-900 overflow-hidden flex flex-col mb-20">
+            <img src="img/texture.png" alt="" class="absolute opacity-25 ml-200 scale-175" />
+            <img src="img/texture.png" alt="" class="absolute opacity-25 -ml-25 -mt-15" />
+            <img src="img/texture.png" alt="" class="absolute opacity-25 ml-260 mt-25 scale-125" />
             <div class="flex flex-col mx-50">
                 <div class="flex text-white p-5 justify-between mb-20">
-                    <img src="img/texture.png" alt="" class="absolute opacity-25 ml-200" />
                     <h1 class="lobster-two-regular text-xl">MiaHotel</h1>
                     <div class="flex gap-6">
                         <select name="currency" id="" class="font-bold bg-rose-900">
@@ -26,9 +28,10 @@
                         <button class="bg-white text-rose-800 rounded-sm py-1.5 px-3 font-medium shadow-md">Sign in</button>
                     </div>
                 </div>
-                <h1 class="text-white text-5xl font-bold mb-2 ml-20">Find your stay</h1>
-                <h2 class="text-white text-2xl mb-30 ml-20">eats,breakfast,spa,...</h2>
-                <div class="bg-yellow-500 absolute h-20 mt-80 border border-solid border-yellow-500 border-5 rounded-sm flex gap-1 font-medium">
+                <h1 class="text-white text-7xl font-bold mb-1 ml-20 lobster-two-regular">MiaHotel</h1>
+                <h2 class="text-white text-2xl ml-50">Find your stay</h2>
+                <h2 class="text-white text-2xl mb-25 ml-80">eats,breakfast,spa,...</h2>
+                <div class="bg-yellow-500 absolute h-20 mt-90 border border-solid border-yellow-500 border-5 rounded-sm flex gap-1 font-medium">
                     <div class="bg-white p-6 relative rounded-md">
                         <i class="fa-solid fa-bed-front"></i>
                         <select name="" id="">
