--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Booking</title>
+        <title>MiaHotel</title>
         <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
         <link rel="shortcut icon" href="https://ih1.redbubble.net/image.2870132373.1841/bg,f8f8f8-flat,750x,075,f-pad,750x1000,f8f8f8.u1.jpg" type="image/x-icon" />
         <link rel="stylesheet" href="./font-awesome-6.5.1-pro-full/css/all.css" />
@@ -17,21 +17,21 @@
             <img src="img/texture.png" alt="" class="absolute opacity-25 ml-260 mt-25 scale-125" />
             <div class="flex flex-col mx-50">
                 <div class="flex text-white p-5 justify-between mb-20">
-                    <h1 class="lobster-two-regular text-xl">MiaHotel</h1>
-                    <div class="flex gap-6">
+                    <a href="index.html" class="lobster-two-regular text-xl z-20">MiaHotel</a>
+                    <div class="flex gap-6 z-20">
                         <select name="currency" id="" class="font-bold bg-rose-900">
                             <option value="">VND</option>
                             <option value="">EUR</option>
                             <option value="">USD</option>
                         </select>
-                        <button class="bg-white text-rose-800 rounded-sm py-1.5 px-3 font-medium shadow-md">Register</button>
-                        <button class="bg-white text-rose-800 rounded-sm py-1.5 px-3 font-medium shadow-md">Sign in</button>
+                        <a href="regis.html" class="bg-white text-rose-800 rounded-sm py-1.5 px-3 font-medium shadow-md">Register</a>
+                        <a href="log.html" class="bg-white text-rose-800 rounded-sm py-1.5 px-3 font-medium shadow-md">Sign in</a>
                     </div>
                 </div>
                 <h1 class="text-white text-7xl font-bold mb-1 ml-20 lobster-two-regular">MiaHotel</h1>
                 <h2 class="text-white text-2xl ml-50">Find your stay</h2>
                 <h2 class="text-white text-2xl mb-25 ml-80">eats,breakfast,spa,...</h2>
-                <div class="bg-yellow-500 absolute h-20 mt-90 border border-solid border-yellow-500 border-5 rounded-sm flex gap-1 font-medium">
+                <div class="bg-yellow-500 absolute h-20 mt-90 border border-solid border-yellow-500 border-5 rounded-sm flex gap-1 font-medium z-20">
                     <div class="bg-white p-6 relative rounded-md">
                         <i class="fa-solid fa-bed-front"></i>
                         <select name="" id="">
@@ -63,7 +63,7 @@
         </section>
         <section class="mx-50 mt-10">
             <h1 class="text-2xl font-bold">More search</h1>
-            <p>Choices that people looking for</p>
+            <p class="mb-2 text-gray-500">Choices that people looking for</p>
             <div class="flex gap-3">
                 <a
                     class="relative h-[300px] w-full overflow-hidden rounded"
@@ -176,7 +176,6 @@
                         <p class="mt-15 text-right font-bold mr-2">560,000VND/Night</p>
                     </div>
                 </div>
-                <div class="swiper-pagination"></div>
                 <div class="swiper-button-next"></div>
                 <div class="swiper-button-prev"></div>
             </div>
