--- a/log.html
+++ b/log.html
@@ -21,27 +21,29 @@
                             <option value="">EUR</option>
                             <option value="">USD</option>
                         </select>
-                        <button class="bg-white text-rose-800 rounded-sm py-1.5 px-3 font-medium shadow-md">Register</button>
-                        <button class="bg-white text-rose-800 rounded-sm py-1.5 px-3 font-medium shadow-md">Sign in</button>
+                        <a href="regis.html" class="bg-white text-rose-800 rounded-sm py-1.5 px-3 font-medium shadow-md">Register</a>
+                        <a href="log.html" class="bg-white text-rose-800 rounded-sm py-1.5 px-3 font-medium shadow-md">Sign in</a>
                     </div>
                 </div>
             </div>
         </header>
                 <div class="px-0 py-20 mx-auto max-w-7xl sm:px-4">
-                    <div class="w-full px-4 pt-5 pb-6 mx-auto mt-8 mb-6 bg-white rounded-none shadow-xl sm:rounded-lg sm:w-10/12 md:w-8/12 lg:w-6/12 xl:w-4/12 sm:px-6">
+                    <div class="w-full px-4 pt-5 pb-6 mx-auto mb-4 bg-white rounded-none shadow-xl sm:rounded-lg sm:w-10/12 md:w-8/12 lg:w-6/12 xl:w-4/12 sm:px-6">
                         <h1 class="mb-4 text-lg font-semibold text-left text-gray-900">Log in to your account</h1>
                         <form class="mb-8 space-y-4">
                             <label class="block">
-                                <span class="block mb-1 text-xs font-medium text-gray-700">Your Email</span>
-                                <input class="form-input" type="email" placeholder="Ex. james@bond.com" inputmode="email" required />
+                                <span class="block mb-1 text-xs font-medium text-gray-700">Phone number</span>
+                                <input class="form-input" type="email" placeholder="Ex. 1234567890" inputmode="email" required />
                             </label>
                             <label class="block">
                                 <span class="block mb-1 text-xs font-medium text-gray-700">Your Password</span>
                                 <input class="form-input" type="password" placeholder="••••••••" required />
                             </label>
-                            <input type="submit" class="w-full py-3 mt-1 btn btn-primary" value="Login" />
+                            <input type="submit" class="w-full py-3 mt-1 btn btn-primary bg-rose-600 rounded-sm text-white font-semibold" value="Login" />
                         </form>
-
+                        <p class="text-center">
+                            <a href="" class="text-sm">Forgot password</a>
+                        </p>
                         </div>
                     </div>
                 </div>
