--- a/regis.html
+++ b/regis.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <header class="bg-rose-900 overflow-hidden flex flex-col mb-20">
+        <header class="bg-rose-900 overflow-hidden flex flex-col">
             <div class="flex flex-col mx-50">
                 <div class="flex text-white p-5 justify-between">
                     <a href="index.html" class="lobster-two-regular text-xl">MiaHotel</a>
@@ -21,11 +21,42 @@
                             <option value="">EUR</option>
                             <option value="">USD</option>
                         </select>
-                        <button class="bg-white text-rose-800 rounded-sm py-1.5 px-3 font-medium shadow-md">Register</button>
-                        <button class="bg-white text-rose-800 rounded-sm py-1.5 px-3 font-medium shadow-md">Sign in</button>
+                        <a href="regis.html" class="bg-white text-rose-800 rounded-sm py-1.5 px-3 font-medium shadow-md">Register</a>
+                        <a href="log.html" class="bg-white text-rose-800 rounded-sm py-1.5 px-3 font-medium shadow-md">Sign in</a>
                     </div>
                 </div>
             </div>
         </header>
+        <section>
+            <div class="px-0 py-20 mx-auto max-w-7xl sm:px-4">
+                    <div class="w-full px-4 pt-5 pb-6 mx-auto mb-4 bg-white rounded-none shadow-xl sm:rounded-lg sm:w-10/12 md:w-8/12 lg:w-6/12 xl:w-4/12 sm:px-6">
+                        <h1 class="mb-4 text-lg font-semibold text-left text-gray-900">Create an account</h1>
+                        <form class="mb-8 space-y-4">
+                            <label class="block">
+                                <span class="block mb-1 text-xs font-medium text-gray-700">Phone number</span>
+                                <input class="form-input" type="email" placeholder="Ex. 1234567890" inputmode="email" required />
+                            </label>
+                            <label class="block">
+                                <span class="block mb-1 text-xs font-medium text-gray-700">Birthday</span>
+                                <input class="form-input" type="date" required />
+                            </label>
+                            <label class="block">
+                                <span class="block mb-1 text-xs font-medium text-gray-700">Your password</span>
+                                <input class="form-input" type="password" placeholder="••••••••" required />
+                            </label>
+                            <label class="block">
+                                <span class="block mb-1 text-xs font-medium text-gray-700">Password confirm</span>
+                                <input class="form-input" type="password" placeholder="••••••••" required />
+                            </label>
+                            <label class="flex items-center">
+                                <input type="checkbox" class="form-checkbox" />
+                                <span class="block ml-2 text-xs font-medium text-gray-700 cursor-pointer">Agree to Privacy Policy</span>
+                            </label>
+                            <input type="submit" class="w-full py-3 mt-1 btn btn-primary bg-rose-600 rounded-sm font-semibold text-white" value="Register" />
+                        </form>
+                        </div>
+                    </div>
+                </div>
+        </section>
     </body>
 </html>
