--- a/r_1.html
+++ b/r_1.html
@@ -42,5 +42,13 @@
                 <button class="border px-10 py-2 bg-rose-600 text-white rounded-sm hover:cursor-pointer hover:bg-rose-900 hover:text-white duration-200 mt-5">Reserve</button>
             </div>
         </section>
+        <footer class="bg-slate-200 h-50 mt-20 overflow-hidden">
+            <p class="text-center text-sm">Copyright &copy; 2025 Miahotel</p>
+            <p class="text-center text-sm mt-2">VietNam</p>
+            <div class="flex">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a4/Agoda_logo_2019.svg/330px-Agoda_logo_2019.svg.png" alt="" class="scale-20" />
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/Booking.com_logo.svg/2560px-Booking.com_logo.svg.png" alt="" class="scale-10 -ml-160" />
+            </div>
+        </footer>
     </body>
 </html>
