--- a/regis.html
+++ b/regis.html
@@ -58,5 +58,13 @@
                     </div>
                 </div>
         </section>
+        <footer class="bg-slate-200 h-50 mt-20 overflow-hidden">
+            <p class="text-center text-sm">Copyright &copy; 2025 Miahotel</p>
+            <p class="text-center text-sm mt-2">VietNam</p>
+            <div class="flex">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a4/Agoda_logo_2019.svg/330px-Agoda_logo_2019.svg.png" alt="" class="scale-20" />
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/Booking.com_logo.svg/2560px-Booking.com_logo.svg.png" alt="" class="scale-10 -ml-160" />
+            </div>
+        </footer>
     </body>
 </html>
